name:                lambdadojo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/epsilonhalbe/lambdadojo#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Heuschober
maintainer:          martin.heuschober@gmail.com
copyright:           2015 (C) Martin Heuschober
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Twotter
                 ,     Commands
  build-depends:       base >= 4.7 && < 5
               ,       attoparsec
               ,       containers
               ,       lens
               ,       mtl
               ,       text
               ,       time
  default-language:    Haskell2010

executable lambdadojo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdadojo
                     , attoparsec
                     , containers
                     , lens
                     , mtl
                     , text
                     , time
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdadojo
                     , attoparsec
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/epsilonhalbe/lambdadojo
